--- a/manifest.json
+++ b/manifest.json
@@ -18,11 +18,11 @@
   "incognito": "spanning",
 
   "icons": {
-    "16": "content/img/mpl-icon-16.png",
-    "32": "content/img/mpl-icon-32.png",
-    "48": "content/img/mpl-icon-48.png",
-    "64": "content/img/mpl-icon-64.png",
-    "128": "content/img/mpl-icon-128.png"
+    "16": "/content/img/mpl-icon-16.png",
+    "32": "/content/img/mpl-icon-32.png",
+    "48": "/content/img/mpl-icon-48.png",
+    "64": "/content/img/mpl-icon-64.png",
+    "128": "/content/img/mpl-icon-128.png"
   },
 
   "browser_action": {
@@ -30,19 +30,19 @@
     "default_area": "navbar",
     "browser_style": true,
     "default_icon": {
-      "16": "content/img/mpl-icon-16.png",
-      "32": "content/img/mpl-icon-32.png",
-      "48": "content/img/mpl-icon-48.png",
-      "64": "content/img/mpl-icon-64.png",
-      "128": "content/img/mpl-icon-128.png"
+      "16": "/content/img/mpl-icon-16.png",
+      "32": "/content/img/mpl-icon-32.png",
+      "48": "/content/img/mpl-icon-48.png",
+      "64": "/content/img/mpl-icon-64.png",
+      "128": "/content/img/mpl-icon-128.png"
     },
-    "default_popup": "browserAction/popup.html"
+    "default_popup": "/browserAction/popup.html"
   },
 
   "background": {
       "scripts": [
-        "background/main.js",
-        "background/defaultPrefs.js"
+        "/background/main.js",
+        "/background/defaultPrefs.js"
       ]
   },
 
@@ -61,7 +61,7 @@
   ],
 
   "options_ui": {
-      "page": "optionsPage/options.html",
+      "page": "/optionsPage/options.html",
       "browser_style": true
   },
 
