--- a/manifest.json
+++ b/manifest.json
@@ -57,7 +57,8 @@
     "*://*.kohalibrary.com/*",
     "*://*.census.gov/*",
     "*://*.googleapis.com/*",
-    "*://mpl-bibex.lrschneider.com/*"
+    "*://mpl-bibex.lrschneider.com/*",
+    "https://spreadsheets.google.com/feeds/list/1ftLNpSrnF0n_YDfR9Sj3Pk-upxsLIxE6Ptzoo20cxG4/*"
   ],
 
   "web_accessible_resources": [
