--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "MPL Bibliovation Extension",
   "short_name": "MPL BibEx",
-  "version": "4.1",
+  "version": "4.2",
   "author": "Lucas Schneider",
   "description": "MPL-BibEx provides additional tools for library staff of Wisconsin's South Central Library System using LibLime's Bibliovation ILS.",
   "homepage_url": "http://lrschneider.com/mpl-bibex-firefox",
@@ -40,7 +40,8 @@
   "background": {
       "scripts": [
         "/background/defaultPrefs.js",
-        "/background/main.js"
+        "/background/main.js",
+        "/background/getPSTAT.js"
       ]
   },
 
