--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "manifest_version": 2,
   "name": "MPL Bibliovation Extension",
   "short_name": "MPL BibEx",
-  "version": "2025.3.2",
+  "version": "2025.3.3",
   "author": "Lucas Schneider",
   "description": "MPL-BibEx provides additional tools for library staff of Wisconsin's South Central Library System using LibLime's Bibliovation ILS.",
-  "homepage_url": "http://lrschneider.com/mpl-bibex-firefox",
+  "homepage_url": "https://github.com/madisonpubliclibrary/mpl-bibex-firefox",
 
   "browser_specific_settings": {
     "gecko": {
